--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <title></title>
     </head>
     <body>
-       <div style="margin-top: 13rem; margin-left: 40rem; width: 40rem;background-color: aquamarine;">
-        <p style="margin-left: 9rem; font-size: 55px;"><b> comeing soon</b></p>
-        <img src="/image/images.png" alt="" style="width: 40rem;" >
+       <div style="margin-top: 13rem; margin-left: 35rem; width: 45rem;background-color: aquamarine;">
+        <p style="margin-left: 12rem; font-size: 55px;"><b>ᴄᴏᴍᴇɪɴɢ ꜱᴏᴏɴ</b></p>
+        <h1 style="font-size: 7rem; margin-left: 22px;">🅳🅴🅻🅾🅾🅿</h1>
        </div>
     </body>
 </html>
