--- a/index.html
+++ b/index.html
@@ -1,11 +1,17 @@
 <html>
     <head>
 <title></title>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+<link rel="stylesheet" href="style.css">
+
+
     </head>
     <body>
-       <div style="margin-top: 13rem; margin-left: 35rem; width: 45rem;background-color: aquamarine;">
-        <p style="margin-left: 12rem; font-size: 55px;"><b>ᴄᴏᴍᴇɪɴɢ ꜱᴏᴏɴ</b></p>
-        <h1 style="font-size: 7rem; margin-left: 22px;">🅳🅴🅻🅾🅾🅿</h1>
-       </div>
+        <div class="container">
+        <div class="col-sm-12 col-xl-12 col-lg-12 col-md-12">
+            <p>ᴄᴏᴍᴇɪɴɢ ꜱᴏᴏɴ</p>
+            <p>🅱🅴🅻🅾🅾🅿</p>
+</div>
+</div>
     </body>
 </html>
