--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <body>
         <div class="container">
         <div class="col-sm-12 col-xl-12 col-lg-12 col-md-12">
-            <p>ᴄᴏᴍᴇɪɴɢ ꜱᴏᴏɴ</p>
+            <p>ᴄᴏᴍɪɴɢ ꜱᴏᴏɴ</p>
             <p>🅱🅴🅻🅾🅾🅿</p>
 </div>
 </div>
